<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray1"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/dark_green">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back"
            app:tint="@color/white" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cow"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_btn"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/cow" />
                </androidx.cardview.widget.CardView>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_animale"
                        android:layout_toLeftOf="@id/whislist_cv"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/map_cv"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="20dp"
                        app:cardBackgroundColor="@color/dark_green"
                        app:cardCornerRadius="360dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:src="@drawable/location_ic"
                            app:tint="@color/white" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/whislist_cv"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@id/map_cv"
                        android:layout_centerVertical="true"

                        app:cardCornerRadius="360dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:src="@drawable/baseline_favorite"
                            />
                    </androidx.cardview.widget.CardView>

                </RelativeLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/animal_name"
                        android:textColor="@color/black"
                        android:textSize="19sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentEnd="true"
                        android:text="@string/price"
                        android:textColor="@color/red"
                        android:textSize="15sp" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/oner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:padding="2dp"
                        android:text="@string/oner"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/oner"
                        android:padding="2dp"
                        android:text="@string/name_oner"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/wight"
                        android:padding="2dp"
                        android:text="@string/wight_name"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/wight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="2dp"
                        android:text="@string/wight"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:padding="2dp"
                        android:text="@string/age"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/age"
                        android:padding="2dp"
                        android:text="@string/age_txt"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/dilvercount"
                        android:padding="2dp"
                        android:text="@string/dilvery_count"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/dilvercount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="2dp"
                        android:text="@string/dilvercount_txt"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/lastdilvery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:padding="2dp"
                        android:text="@string/dilvery_last"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/lastdilvery"
                        android:padding="2dp"
                        android:text="@string/lastdilver_txt"
                        android:textSize="12sp"
                        android:textStyle="bold" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/gender_txt"
                        android:padding="2dp"
                        android:text="@string/gendar"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/gender_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="2dp"
                        android:text="@string/female"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/address"
                        android:padding="2dp"
                        android:text="@string/address"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/address_tile"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"

                    android:id="@+id/relaytive_rv"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


        <androidx.cardview.widget.CardView
            android:id="@+id/chat_cv"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_above="@id/bottom_btn"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/dark_green"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/chate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="6dp"
                    android:src="@drawable/chat_ic"
                    app:tint="@color/white" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/bottom_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.skydoves.elasticviews.ElasticButton
                android:id="@+id/enquiry_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/enquriy"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:button_cornerRadius="5dp"
                app:button_duration="250"
                app:button_scale="0.87" />

            <com.skydoves.elasticviews.ElasticButton
                android:id="@+id/btn_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:backgroundTint="#da851d"
                android:text="@string/call"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:button_cornerRadius="5dp"
                app:button_duration="250"
                app:button_scale="0.87" />
        </LinearLayout>

    </RelativeLayout>



</LinearLayout>