<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#173F465D">

    <androidx.cardview.widget.CardView
        android:id="@+id/oddersummer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/cow" />

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/productname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/animal_name"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@color/colorGray1" />

            <TextView
                android:id="@+id/orderid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="#15554"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderno"
                android:textSize="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="10 July 2020 "
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"

                    android:layout_toRightOf="@id/date"
                    android:text="  9:50"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="10dp" />


            <TextView
                android:id="@+id/paisa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_marginTop="10dp"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pricetex"
                android:textSize="10dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorGray1" />

            <TextView
                android:id="@+id/reptoder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="@string/feedback"

                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>