<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/btn_withdraw"

    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/dark_green">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back"
            app:tint="@color/white" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wallet"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@drawable/shap"
        android:gravity="center"
        >


        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo"
                android:background="@color/white"/>
        </androidx.cardview.widget.CardView>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/walletmoney"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:padding="10dp"
                android:text="@string/balance"
                android:textColor="@color/white"
                android:textSize="20dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="₹100"
                android:textSize="20dp"
                android:id="@+id/amust"
                android:layout_toRightOf="@id/balance"
                android:textColor="@color/white"
                android:padding="10dp"/>

        </RelativeLayout>




    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_his"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        android:textSize="20dp"
        android:padding="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layoutAnimation="@anim/layout_animation"
        android:id="@+id/wallet_rv"/>

</LinearLayout>
    <com.skydoves.elasticviews.ElasticButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/withdraw"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:background="@drawable/btn_bg"
        android:id="@+id/btn_withdraw"
        app:button_cornerRadius="5dp"
        app:button_duration="250"
        app:button_scale="0.87" />

</RelativeLayout>